# EDIT-DSBA-ML

./: Exercise.ipynb  README.md  pyproject.toml
.ipynb_checkpoints/: ML_project-checkpoint.ipynb
08 - Regression with Linear Regression/: Learning notebook.ipynb
08 - Regression with Linear Regression/.ipynb_checkpoints/: airy-checkpoint.ipynb
10 - Classification with Logistic Regression/: utils.py
11 - Metrics for Classification/.ipynb_checkpoints/: Learning Notebook-checkpoint.ipynb
12 - Tree-Based Models/: Learning notebook.ipynb
13 - Bias-Variance tradeoff and Model Selection/: Learning notebook.ipynb
15 - Hyperparameter Tuning/: Learning notebook.ipynb
15 - Hyperparameter Tuning/.ipynb_checkpoints/: Learning notebook-checkpoint.ipynb
Clustering Dimension/: Learning Notebook.ipynb
ConvolutionalNN/: CNN.ipynb
ConvolutionalNN/.ipynb_checkpoints/: CNN-checkpoint.ipynb
Dimensionality Reduction/: Learning Notebook.ipynb
Ensemble Methods/.ipynb_checkpoints/: Learning Notebook-checkpoint.ipynb
Ensemble Methods/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
Feature Selection/: Learning Notebook.ipynb
Imbalanced Datasets/: Learning Notebook.ipynb
LDA/: Learning notebook.ipynb
Naive Bayes/: Learning Notebook.ipynb
Outlier Detection/: Learning Notebook.ipynb
SimpleNN/: Classification-with-NN.ipynb  Regression-with-NN.ipynb
Unsupervised Models/: Clustering_Consulting_Project.ipynb  Clustering_Consulting_Project_SOLUTIONS.ipynb  Learning Notebooks.ipynb
Validation Schemas/: Learning Notebook.ipynb
(+14 files in other folders)
