[tool.poetry]
name = "edit-dsba-ml"
version = "0.1.0"
description = ""
authors = ["Roberto Álvarez <roberto.alvarez@daredata.engineering>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
scikit-learn = "^1.4.2"
matplotlib = "^3.8.4"
imblearn = "^0.0"
seaborn = "^0.13.2"
ipywidgets = "^8.1.2"


[tool.poetry.group.dev.dependencies]
notebook = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
